--- a/media-query.html
+++ b/media-query.html
@@ -14,6 +14,8 @@
       @media (max-width: 600px) {
         /* CSS for screens below or equal to 600px wide */
         div {
+          height: 200px;
+          width: 200px;
         }
       }
     </style>
